--- a/gamepage/style.css
+++ b/gamepage/style.css
@@ -153,6 +153,12 @@ main {
     margin: 2px;
     background: rgb(168, 161, 137);
     border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    img {
+        height: 95%;
+    }
 }
 
 #preview {
@@ -164,7 +170,7 @@ main {
     background-position-x: center;
     border-radius: 50px;
     box-shadow: 11px 11px 15px #9b9581,
-    -11px -11px 15px #dbd3b7;
+                -11px -11px 15px #dbd3b7;
 }
 
 @media (max-width: 999px) { /*スマホモード*/
