--- a/gamepage/style.css
+++ b/gamepage/style.css
@@ -8,11 +8,29 @@ main {
     font-family: 'Receipt';
 }
 
+header {
+    display: flex;
+    align-items: center;
+    #header_h1 {
+        position: absolute;
+        --nameLength: 0;
+        left: calc(50vw - (var(--nameLength) / 2));
+        font-family: var(--defaultFont-レシート);
+        font-weight: normal;
+        &::before {
+            content: "ようこそ、";
+        }
+        &::after {
+            content: " 様";
+        }
+    }
+}
+
 .container{
     display: flex;
     align-items: flex-start;
     margin: 0 10px;
-    /* &.active{
+    /* &.active {
         -ms-filter: blur(15px);
         filter: blur(15px);
     } */
