--- a/style_hamburger.css
+++ b/style_hamburger.css
@@ -111,11 +111,11 @@
     z-index: 1000;
     transition: opacity 0.6s ease;
     pointer-events: none;
-    background-color: rgba(255, 255, 255, .1);
-    backdrop-filter: blur(3px);
+    background: rgba(207, 201, 182, 0.2);
+    /* filter: drop-shadow(20px 20px 2px rgb(0, 0, 0, .4)); */
+    /* backdrop-filter: blur(3px); */
     border-radius: 20px;
     border: 1px solid rgba(250, 250, 250, .2);
-    box-shadow: 0px 15px 20px rgba(0, 0, 0, .2);
     a {
         display: flex;
         align-items: flex-start;
@@ -123,6 +123,7 @@
         font-family: 'Receipt';
         font-size: 3vh;
         margin: 1vh 0;
+        transition: .2s ease-out;
         &:focus {
             border: none;
         }
@@ -168,12 +169,12 @@
     .my-btn-animation:before {
         content: '';
         position: absolute;
-        top: 50%;
+        bottom: -1px;
         left: 0;
         z-index: 1;
-        background: var(--defaultColor-Dark);
+        background: var(--defaultColor-Light);
         width: 100%;
-        height: 5%;
+        height: 1px;
         transform: scale(0, 1);           /* ←ポイント */
         transition: transform .3s ease;   /* ←ポイント */
         transform-origin: left;           /* ←ポイント */
