--- a/style.css
+++ b/style.css
@@ -218,25 +218,25 @@ main {
     justify-content: space-between;
     align-items: center;
     overflow: hidden;
-    background: rgb(0, 0, 0, .2);
-    box-shadow: 10px 20px 20px rgb(0, 0, 0, .42),
+    background: rgb(187, 180, 156, .5);
+    filter: drop-shadow(10px 10px 3px rgb(0, 0, 0, .42));
+    /* box-shadow: 10px 20px 12px rgb(0, 0, 0, .42),
+                5px 5px 1px var(--defaultColor),
                 inset 0 0 7px rgb(212, 203, 175, .62),
-                inset 10px 20px 25px rgb(212, 203, 175, .82);
+                inset 10px 20px 15px rgb(212, 203, 175, .82); */
     margin-bottom: 5%;
     padding: .7% 1.5%;
-    border-top: solid 1px rgb(250, 250, 250, .5);
-    border-left: solid 1px rgb(250, 250, 250, .6);
-    border-right: solid 1px rgb(250, 250, 250, .3);
-    border-bottom: solid 1px rgb(250, 250, 250, .3);
+    border-right: solid 1px rgb(250, 250, 250, .5);
+    border-bottom: solid 1px rgb(250, 250, 250, .6);
+    border-top: solid 1px rgb(250, 250, 250, .3);
+    border-left: solid 1px rgb(250, 250, 250, .3);
     border-radius: 12px;
     text-shadow: 0 0 2px rgb(255, 255, 255, .4),
                 0 0 6px rgb(212, 203, 175);
     transition: .3s ease-out;
     z-index: 101;
     &:hover {
-        box-shadow: 7px 14px 15px rgb(0, 0, 0, .47),
-                    inset 0 0 7px rgb(212, 203, 175, .62),
-                    inset 7px 14px 20px rgb(212, 203, 175, .9);
+        filter: drop-shadow(8px 8px 1px rgb(0, 0, 0, .52));
     }
     img {
         margin-right: 2%;
@@ -249,15 +249,16 @@ main {
     position: relative;
     padding: .7% 1.5%;
     text-align: left;
-    background: rgb(0, 0, 0, .1);
+    background: rgb(187, 180, 156, .5);
     border-radius: 12px;
-    box-shadow: 10px 20px 15px rgb(0, 0, 0, .42),
+    filter: drop-shadow(10px 10px 3px rgb(0, 0, 0, .42));
+    /* box-shadow: 10px 20px 15px rgb(0, 0, 0, .42),
                 inset 0 0 10px rgb(212, 203, 175, .62),
-                inset 10px 20px 20px rgb(194, 188, 166, .82);
-    border-top: solid 1px rgb(250, 250, 250, .5);
-    border-left: solid 1px rgb(250, 250, 250, .6);
-    border-right: solid 1px rgb(250, 250, 250, .3);
-    border-bottom: solid 1px rgb(250, 250, 250, .3);
+                inset 10px 20px 20px rgb(194, 188, 166, .82); */
+    border-right: solid 1px rgb(250, 250, 250, .5);
+    border-bottom: solid 1px rgb(250, 250, 250, .6);
+    border-top: solid 1px rgb(250, 250, 250, .3);
+    border-left: solid 1px rgb(250, 250, 250, .3);
     z-index: 101;
 }
 .newUserBox p, .upload_button p {
@@ -289,22 +290,21 @@ main {
     position: relative;
     left: 70%;
     margin-top: 2vh;
-    background: rgb(0, 0, 0, .2);
-    box-shadow: 5px 10px 15px rgb(0, 0, 0, .32),
+    background: rgb(187, 180, 156, .5);
+    filter: drop-shadow(8px 8px 3px rgb(0, 0, 0, .42));
+    /* box-shadow: 5px 10px 15px rgb(0, 0, 0, .32),
                 inset 0 0 5px rgb(212, 203, 175, .62),
-                inset 5px 10px 25px rgb(175, 167, 144, .82);
-    border-top: solid 1px rgb(250, 250, 250, .5);
-    border-left: solid 1px rgb(250, 250, 250, .6);
-    border-right: solid 1px rgb(250, 250, 250, .3);
-    border-bottom: solid 1px rgb(250, 250, 250, .3);
+                inset 5px 10px 25px rgb(175, 167, 144, .82); */
+    border-right: solid 1px rgb(250, 250, 250, .5);
+    border-bottom: solid 1px rgb(250, 250, 250, .6);
+    border-top: solid 1px rgb(250, 250, 250, .3);
+    border-left: solid 1px rgb(250, 250, 250, .3);
     border-radius: 6px;
     text-shadow: 0 0 2px rgb(255, 255, 255, .2),
                 0 0 5px rgb(175, 167, 144, .5);
     transition: .3s ease-out;
     &:hover {
-        box-shadow: 4px 8px 12px rgb(0, 0, 0, .38),
-                    inset 0 0 5px rgb(212, 203, 175, .62),
-                    inset 4px 8px 15px rgb(175, 167, 144, .9);
+        filter: drop-shadow(5px 5px 1px rgb(0, 0, 0, .52));
     }
 }
 .upload_button:focus, #newName:focus, .done_button:focus {
