--- a/style_hamburger.css
+++ b/style_hamburger.css
@@ -133,13 +133,46 @@
         top: 68%;
         width: 100%;
     }
+    #loginNow {
+        position: relative;
+        display: flex;
+        align-items: flex-end;
+        justify-content: space-evenly;
+        #nowUserName {
+            --nameLength: 0;
+            width: var(--nameLength);
+            bottom: 0;
+            background: none;
+            padding-bottom: 5px;
+            border: none;
+            border-bottom: dotted 1px var(--defaultColor-Dark);
+            font-family: 'Receipt';
+            font-family: var(--defaultFont-レシート);
+            font-size: 2.5vh;
+            text-align: center;
+        }
+        #logoutButton {
+            right: 0;
+            font-size: 2.5vh;
+            text-align: center;
+        }
+        &.active {
+            display: none;
+        }
+    }
     #loginButton {
+        left: calc(50% - 5em);
+        margin: 1vh 0;
+        display: block;
+        &.active {
+            display: none;
+        }
+    }
+    .my-contact-btn {
         width: 10em;
         position: relative;
-        left: calc(50% - 5em);
         bottom: 0;
         background: none;
-        margin: 1vh 0;
         padding-bottom: 5px;
         border: none;
         border-bottom: dotted 1px var(--defaultColor-Dark);
@@ -152,9 +185,6 @@
         &:focus {
             border: none;
         }
-    }
-    .my-contact-btn {
-        position: relative;
     }
     /*ボタン内のテキストを疑似要素の上にもってくる*/
     .my-contact-btn .temp {
