--- a/gamepage/stages/1/style.css
+++ b/gamepage/stages/1/style.css
@@ -1,8 +1,8 @@
 /*基本設定*/
 @import url('https://fonts.googleapis.com/css2?family=Bad+Script&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Grandiflora+One&display=swap');
-@import url('../../../style_pageback.css');
-@import url('../../../style_clear_icon.css');
+@import url('../../../root/style_pageback.css');
+@import url('../../../root/style_clear_icon.css');
 .font-bad {
     font-family: "Bad Script", cursive;
 }
