--- a/root/style_hamburger.css
+++ b/root/style_hamburger.css
@@ -1,3 +1,5 @@
+@import url('root.css');
+
 /*ハンバーガーメニュー*/
 .hamburger_button{
     width: 80px;
@@ -120,7 +122,7 @@
         display: flex;
         align-items: flex-start;
         justify-content: center;
-        font-family: 'Receipt';
+        font-family: var(--defaultFont-レシート);
         font-size: 3vh;
         margin: 1vh 0;
         transition: .2s ease-out;
@@ -176,7 +178,7 @@
         padding-bottom: 5px;
         border: none;
         border-bottom: dotted 1px var(--defaultColor-Dark);
-        font-family: 'Receipt';
+        font-family: var(--defaultFont-レシート);
         font-size: 3vh;
         transition: .2s ease-out;
         &:hover {
