--- a/style.css
+++ b/style.css
@@ -47,6 +47,9 @@ main {
     clip-path: circle(50%);
     background: rgb(157, 152, 135);
 }
+
+
+
 #circle3 {
     bottom: -700px;
     right: -450px;
@@ -73,11 +76,18 @@ main {
     left: 0;
 }
 #star {
-    height: 12vh;
-    clip-path: circle(50%);
-    background: rgb(157, 152, 135);
-    top: -6vh;
-    left: -6vh;
+    width: 14vh;
+    height: 14vh;
+    top: -7vh;
+    left: -7vh;
+}
+@media all and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: .001dpcm) {
+    .noise {
+        position: absolute;
+        background: radial-gradient(circle at 50% 50%, rgb(0, 0, 0), rgb(0, 0, 0, 0)), url("data:image/svg+xml,%3Csvg viewBox='0 0 600 600' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+        filter: contrast(200%) brightness(900%) invert(0%);
+        mix-blend-mode: multiply;
+    }
 }
 #planet_1 {
     height: 20vh;
@@ -201,7 +211,6 @@ main {
 }
 .prompt {
     width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -388,9 +397,10 @@ main {
             right: -95vw;
         }
         #star {
-            height: 7vh;
-            top: -3.5vh;
-            left: -3.5vh;
+            width: 8.6vh;
+            height: 8.6vh;
+            top: -4.3vh;
+            left: -4.3vh;
         }
         #planet_1 {
             height: 11.67vh;
@@ -494,5 +504,3 @@ main {
         }
     }
 }
-
-
